# hierarchical_data

./: README.md  db.sqlite3  pyproject.toml
hierarchical_data/: settings.py  urls.py
hierarchical_data_app/: admin.py  apps.py  models.py  views.py
hierarchical_data_app/migrations/: 0001_initial.py
templates/: index.html
